--- a/e2e/transactions/SwapTransaction.yaml
+++ b/e2e/transactions/SwapTransaction.yaml
@@ -1,3 +1,10 @@
+# This flow covers:
+# [x] Swap ETH to ERC20 (DAI)
+# [x] Degen Mode toggle
+# [x] Review panel
+# [x] Gas speed settings
+# [x] Activity Screen updates
+
 appId: ${APP_ID}
 tags:
   - wallet
@@ -30,12 +37,51 @@ tags:
       # Select DAI as output token
       - tapOn: 'Find a token to buy'
       - inputText: 'DAI'
+      - hideKeyboard
       - tapOn:
           id: token-to-buy-dai-1
       - assertVisible: 'DAI.*'
-      - assertVisible: 'No Balance'
-      - hideKeyboard
 
+      # Navigate to swap settings
+      - tapOn:
+          id: swap-settings-button
+
+      # Toggle Degen Mode off and on and back off
+      - tapOn:
+          id: swap-settings-panel-degen-mode-button
+      - assertNotVisible: 'Max Slippage'
+      - tapOn:
+          id: swap-settings-panel-degen-mode-button
+      - assertVisible: 'Max Slippage'
+      - tapOn:
+          id: swap-settings-panel-degen-mode-button
+      - assertNotVisible: 'Max Slippage'
+      # Close settings
+      - tapOn:
+          id: swap-bottom-action-button
+      # Go to review
+      - tapOn:
+          id: swap-bottom-action-button
+      - assertVisible:
+          id: review-panel
+      - runFlow:
+          when:
+            platform: ios
+          commands:
+            - assertVisible:
+                id: review-panel-min-received-or-max-sold-label
+            - assertVisible:
+                id: review-panel-network-label
+            - assertVisible:
+                id: review-panel-rainbow-fee-label
+      - tapOn:
+          id: gas-speed-pager
+      - assertVisible: '.*Custom.*'
+      - assertVisible: '.*Normal.*'
+      - assertVisible: '.*Fast.*'
+      - tapOn: '.*Urgent.*'
+
+      # Execute Swap
       - longPressOn:
           id: swap-bottom-action-button
       - runFlow: ../utils/MaybeSetupPin.yaml
