Enable new architecture

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "@ethersproject/transactions": "5.7.0",
     "@ethersproject/units": "5.7.0",
     "@ethersproject/wallet": "5.7.0",
-    "@gorhom/bottom-sheet": "4.6.1",
+    "@gorhom/bottom-sheet": "5.1.6",
     "@json-rpc-tools/utils": "1.7.6",
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@ledgerhq/hw-app-eth": "6.39.0",
@@ -173,6 +173,7 @@
     "expo": "53.0.11",
     "expo-image-manipulator": "13.1.7",
     "expo-image-picker": "17.0.0-canary-20250713-8f814f8",
+    "expo-linear-gradient": "14.1.5",
     "expo-store-review": "8.1.5",
     "expo-web-browser": "14.1.6",
     "fast-text-encoding": "1.0.4",
@@ -214,13 +215,14 @@
     "react-native": "0.79.5",
     "react-native-action-sheet": "2.2.0",
     "react-native-actionsheet": "2.4.2",
+    "react-native-advanced-input-mask": "1.4.2",
     "react-native-aes-crypto": "rainbow-me/react-native-aes#65c49f7e70266615b2999eaa7db654d3fe4f2e3b",
     "react-native-animateable-text": "0.16.0-beta.0",
     "react-native-ble-plx": "3.2.1",
     "react-native-blur-view": "christianbaroni/react-native-blur-view#2548117e37750f2c08ef0ec8c7e1c38e1294c9a8",
     "react-native-bootsplash": "6.3.7",
     "react-native-branch": "5.3.1",
-    "react-native-change-icon": "4.0.0",
+    "react-native-change-icon": "5.0.0",
     "react-native-cloud-fs": "rainbow-me/react-native-cloud-fs#d73f055c441566e5a57eebd621da8df3cf2499bb",
     "react-native-crypto": "2.2.0",
     "react-native-dark-mode": "0.2.2",
@@ -232,18 +234,17 @@
     "react-native-fs": "2.16.6",
     "react-native-gesture-handler": "2.25.0",
     "react-native-get-random-values": "1.5.0",
-    "react-native-haptic-feedback": "2.2.0",
+    "react-native-haptic-feedback": "2.3.3",
     "react-native-indicators": "0.17.0",
     "react-native-ios-context-menu": "1.15.3",
     "react-native-keyboard-area": "1.0.6",
     "react-native-keyboard-controller": "1.16.7",
     "react-native-keychain": "10.0.0",
     "react-native-level-fs": "3.0.1",
-    "react-native-linear-gradient": "2.8.3",
     "react-native-mail": "4.1.0",
     "react-native-markdown-display": "7.0.0-alpha.2",
     "react-native-minimizer": "rainbow-me/react-native-minimizer#26ae6dce10d353de701cebc3a1ae126729bf87f0",
-    "react-native-mmkv": "2.12.2",
+    "react-native-mmkv": "3.3.0",
     "react-native-os": "rainbow-me/react-native-os#41a08e45260b8c1c53c77ad00e13ae954cb9337c",
     "react-native-pager-view": "6.8.1",
     "react-native-palette-full": "1.2.0",
@@ -266,7 +267,6 @@
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "3.5.2",
     "react-native-tcp": "3.3.2",
-    "react-native-text-input-mask": "2.0.0",
     "react-native-text-size": "rainbow-me/react-native-text-size#15b21c9f88c6df0d1b5e0f2ba792fe59b5dc255a",
     "react-native-tooltip": "rainbow-me/react-native-tooltip#db20e9521c5be9e151728ce402cd70fdb556bd97",
     "react-native-tooltips": "rainbow-me/react-native-tooltips#fdafbc7ba33ee231229f5d3f58b29d0d1c55ddfa",
