--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   android-e2e:
     if: github.event.pull_request.draft == false
-    runs-on: android-8core-32ram-ubuntu
+    runs-on: ubuntu-latest-8-cores
     timeout-minutes: 60
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
