--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,7 @@ react {
 	    // codegenDir = file("../node_modules/@react-native/codegen")
 	    //   The cli.js file which is the React Native CLI entrypoint. Default is ../node_modules/react-native/cli.js
 	    // cliFile = file("../node_modules/react-native/cli.js")
+        cliFile = file("../../node_modules/@rnef/cli/dist/src/bin.js")
 
 	    /* Variants */
 	    //   The list of variants to that are debuggable. For those we're going to
