--- a/e2e/config.yaml
+++ b/e2e/config.yaml
@@ -3,3 +3,8 @@ flows:
   - screens/*
   - settings/*
   - transactions/*
+platform:
+  ios:
+    disableAnimations: true
+  android:
+    disableAnimations: true
