--- a/e2e/transactions/WrapTransaction.yaml
+++ b/e2e/transactions/WrapTransaction.yaml
@@ -106,7 +106,7 @@ tags:
                   id: balance-coin-row-Wrapped Ether
                 timeout: 30000
       # Unwrap Weth
-      - tapOn: 'Ethereum'
+      - tapOn: '.*Ethereum.*'
       - tapOn:
           id: swap-action-button
       - tapOn:
