fix issues with imports and with taking old files in merge

--- a/package.json
+++ b/package.json
@@ -84,8 +84,10 @@
     "@ethersproject/logger": "5.7.0",
     "@ethersproject/properties": "5.7.0",
     "@ethersproject/providers": "5.7.2",
+    "@ethersproject/random": "5.7.0",
     "@ethersproject/sha2": "5.7.0",
     "@ethersproject/shims": "5.7.0",
+    "@ethersproject/solidity": "5.7.0",
     "@ethersproject/strings": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
     "@ethersproject/units": "5.7.0",
@@ -134,10 +136,14 @@
     "@wagmi/chains": "1.8.0",
     "@walletconnect/client": "1.8.0",
     "@walletconnect/core": "2.17.0",
+    "@walletconnect/legacy-utils": "2.0.0",
+    "@walletconnect/react-native-compat": "2.17.0",
     "@walletconnect/types": "2.17.0",
     "@walletconnect/utils": "2.17.0",
     "assert": "1.5.0",
     "async-mutex": "0.3.2",
+    "asyncstorage-down": "4.2.0",
+    "big-integer": "1.6.51",
     "bignumber.js": "9.0.1",
     "bip39": "3.0.2",
     "browserify-zlib": "0.1.4",
@@ -217,6 +223,7 @@
     "react-native-dark-mode": "0.2.2",
     "react-native-device-info": "5.3.1",
     "react-native-dotenv": "2.4.2",
+    "react-native-edge-to-edge": "1.4.3",
     "react-native-extra-dimensions-android": "1.2.2",
     "react-native-fast-image": "8.5.11",
     "react-native-fs": "2.16.6",
@@ -273,6 +280,7 @@
     "react-navigation-backhandler": "2.0.1",
     "react-primitives": "0.8.1",
     "react-redux": "7.2.1",
+    "react-style-proptype": "3.2.2",
     "readable-stream": "1.1.14",
     "recoil": "0.7.6",
     "recyclerlistview": "3.0.5",
@@ -298,6 +306,7 @@
     "vm-browserify": "0.0.4",
     "w2t": "3.0.2",
     "zeego": "1.10.0",
+    "zod": "3.23.8",
     "zustand": "4.5.5"
   },
   "devDependencies": {
