--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   android-e2e:
     if: github.event.pull_request.draft == false
-    runs-on: blacksmith-8vcpu-ubuntu-2404
+    runs-on: app-e2e-runner
     timeout-minutes: 60
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Java environment
-        uses: useblacksmith/setup-java@v5
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
@@ -79,7 +79,7 @@ jobs:
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
 
       - name: Cache Yarn dependencies
-        uses: useblacksmith/cache@v5
+        uses: actions/cache@v4
         with:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -90,7 +90,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Cache Gradle build
-        uses: useblacksmith/setup-gradle/setup-gradle@v5
+        uses: gradle/actions/setup-gradle@v3
         with:
           cache-read-only: false
 
