--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@notifee/react-native": "7.8.2",
     "@rainbow-me/provider": "0.1.2",
     "@rainbow-me/react-native-animated-number": "0.0.2",
-    "@rainbow-me/swaps": "0.36.0",
+    "@rainbow-me/swaps": "file:./rainbow-me-swaps-0.36.0.tgz",
     "@rainbow-me/token-launcher": "0.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-camera-roll/camera-roll": "7.7.0",
