--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "@walletconnect/utils": "2.17.0",
     "assert": "1.5.0",
     "async-mutex": "0.3.2",
+    "asyncstorage-down": "4.2.0",
     "bignumber.js": "9.0.1",
     "bip39": "3.0.2",
     "browserify-zlib": "0.1.4",
