--- a/e2e/screens/Discover.yaml
+++ b/e2e/screens/Discover.yaml
@@ -73,9 +73,9 @@ tags:
       - tapOn:
           id: profile-sheet-watch-button
       - runFlow: ../utils/MaybeSetupPin.yaml
-      - swipe:
-          direction: DOWN
-      - tapOn:
-          id: done-button
+      #   - swipe:
+      #       direction: DOWN
+      #   - tapOn:
+      #       id: done-button
       - assertVisible:
-          id: discover-header
+          id: wallet-screen
