--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "ethereumjs-wallet": "1.0.1",
     "events": "3.3.0",
     "expo": "53.0.11",
-    "expo-image-picker": "16.1.4",
+    "expo-image-picker": "17.0.0-canary-20250713-8f814f8",
     "expo-store-review": "8.1.5",
     "expo-web-browser": "14.1.6",
     "fast-text-encoding": "1.0.4",
@@ -231,7 +231,6 @@
     "react-native-gesture-handler": "2.25.0",
     "react-native-get-random-values": "1.5.0",
     "react-native-haptic-feedback": "2.2.0",
-    "react-native-image-crop-picker": "0.42.0",
     "react-native-indicators": "0.17.0",
     "react-native-ios-context-menu": "1.15.3",
     "react-native-keyboard-area": "1.0.6",
