--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "ethereumjs-wallet": "1.0.1",
     "events": "3.3.0",
     "expo": "53.0.11",
+    "expo-image-manipulator": "13.1.7",
     "expo-image-picker": "17.0.0-canary-20250713-8f814f8",
     "expo-store-review": "8.1.5",
     "expo-web-browser": "14.1.6",
